@@ -465,6 +465,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2608. FairScheduler: Potential deadlocks in loading alloc files and 
     clock access. (Wei Yan via kasha)
 
+    YARN-2606. Application History Server tries to access hdfs before doing
+    secure login (Mit Desai via jeagles)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
